--- a/projects.css
+++ b/projects.css
@@ -46,7 +46,9 @@
 }
 
 .project-image img {
-    width: 60vw;
+    width: 80%;
+    object-fit: cover;
+    object-position: 50%; 
     border-radius: 20px;
     box-shadow:  2px 6px 20px#181d27;
 }
